<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sanal Dersane</string>
    <string name="admob_id">a152d910c4acb46</string>
    <string name="language">en</string>
    <string name="ratethisapp_msg">If you like this app.Please take a moment to rate this app.It would\'t take more than a minute.\nEnjoy!</string>
    <string name="ratethisapp_title">Rate this App.</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
     <string name="kategori_sec">Kategori Seç</string>
     <string name="ders_sec">Ders Seç</string>
     
     <string name="click_me">Click Me</string>
    
     <string-array name="KursSec">
        <item>KPSS</item>
        <item>YGS</item>
        <item>LYS</item>
    </string-array>
    
    <string-array name="KPSSDersleri">
        <item>Genel Kültür</item>
        <item>Vatandaşlık</item>
        <item>Genel Yetenek</item>
    </string-array>
    
    <string-array name="YGSDersleri">
        <item>MAT1</item>
        <item>FEN1</item>
        <item>TURKÇE1</item>
    </string-array>
    
    <string-array name="LYSDersleri">
        <item>MAT2</item>
        <item>FEN2</item>
        <item>Edebiyat</item>
    </string-array>
 
     <style name="DefaultButtonText">
       <item name="android:layout_width">fill_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">#979797</item>
        <item name="android:gravity">center</item>
        <item name="android:layout_margin">3dp</item>
        <item name="android:textStyle">normal</item>
        <item name="android:textSize">20sp</item>
        <item name="android:shadowColor">#f9f9f9</item>
        <item name="android:shadowDx">1</item>
        <item name="android:shadowDy">1</item>
        <item name="android:shadowRadius">1</item>
    </style>
    
   
    <string name="StydyLevel">Stydy Level</string>
    <string name="valider">Valider</string>
    <string name="Register">Register</string>
    <string name="Login">Login</string>
    <string name="NewAccount"><u>Create new account</u></string>
    <string name="ChoiceOfLanguage">Kurs seç :</string>
    <string name="ChoiceOfLevel">Deneme Seç :</string>
    <string name="ChoiceOfStrategy">Sorular Nalıl Gelsin:</string>
    <string name="Start">Başlat</string>
    <string name="Paused">Durduruldu</string>
    <string name="Exit">Çıkış</string>
    <string name="save">Kaydet</string>
    <string name="Logout">Çıkış Yap</string>
    
    <string-array name="ListeLevel">
        <item>Deneme 1</item>
        <item>Deneme 2</item>
        <item>Deneme 3</item>
    </string-array>
     <string-array name="Listestrategy">
        <item>Sıralı</item>
        <item>Rastgele</item>
    </string-array>
        <string name="question">Soru</string>
        <string name="of">/</string>
        <string name="numberofquestion">20</string>
        <string name="timer">"Süre : "</string>
        <string name="correctanswer">Doğru Cevap =</string>
        <string name="wronganswer">Yanlış Cevap =</string>
        <string name="precentageofcorrects">Doğru Soruların Yüzesi :</string>
        <string name="time">Zaman:</string>
        <string name="result">Sonuç</string>
        <string name="Your">Senin Cevabın :</string>
        <string name="Correct">Doğru Cevap :</string>

</resources>
