<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:fillViewport="true"
     android:background="@drawable/kpss1"
    >

         <RelativeLayout
             android:id="@+id/textVie"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:layout_alignParentLeft="true"
             android:layout_alignParentRight="true" >

        <TextView
            android:id="@+id/textView1"
            style="@style/TxtView"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="120dp"
            android:textColor="#000000"
            android:text="@string/ChoiceOfLanguage" />

    

        <Spinner
            android:id="@+id/languagespinner"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_alignBaseline="@+id/textView1"
            android:layout_alignBottom="@+id/textView1"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp" />

        <TextView
            android:id="@+id/textView2"
            style="@style/TxtView"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView1"
            android:layout_marginTop="60dp"
            android:textColor="#000000"
            android:text="@string/ChoiceOfLevel" />

        <Spinner
            android:id="@+id/levelspinner"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_alignBaseline="@+id/textView2"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp" />

        <TextView
            android:id="@+id/textView3"
            style="@style/TxtView"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView2"
            android:layout_marginTop="60dp"
            android:textColor="#000000"
            android:text="@string/ChoiceOfStrategy" />

        <Spinner
            android:id="@+id/stratygyspinner"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_alignBaseline="@+id/textView3"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp" />

        <Button
            android:id="@+id/StartBtn"
            style="@style/MyBtnStyle"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="40dp"
            android:text="@string/Start" />
        

    </RelativeLayout>
   </ScrollView>