<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >


         <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:background="@drawable/kpss1"
        >



        <TextView
            android:id="@+id/correctanswer"
            style="@style/TxtView"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/include1"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="60dp"
            android:textColor="#000000"
            android:text="@string/correctanswer" />

        <TextView
            android:id="@+id/wronganswer"
            style="@style/TxtView"
            android:textColor="#000000"
            android:layout_alignLeft="@+id/correctanswer"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/correctanswer"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/wronganswer" />

        <TextView
            android:id="@+id/numberofcorrectanswer"
            style="@style/TxtView"
            android:textColor="#000000"
            android:layout_above="@+id/wronganswer"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/wronganswer"
            android:text="TextView" />

        <TextView
            android:id="@+id/textView1"
            style="@style/TxtView"
            android:textColor="#000000"
            android:layout_alignLeft="@+id/wronganswer"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/wronganswer"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="7dp"
            android:text="@string/precentageofcorrects" />

        <TextView
            android:id="@+id/precentageofcorrects"
            style="@style/TxtView"
            android:textColor="#000000"
            android:layout_alignBottom="@+id/textView1"
            android:layout_marginLeft="7dp"
            android:layout_toRightOf="@+id/textView1"
            android:text="TextView" />

        <TextView
            android:id="@+id/textView2"
            style="@style/TxtView"
            android:textColor="#000000"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView1"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="7dp"
            android:text="@string/time" />

        <TextView
            android:id="@+id/numberofwronganswer"
            style="@style/TxtView"
            android:textColor="#000000"
            android:layout_alignBaseline="@+id/wronganswer"
            android:layout_toRightOf="@+id/wronganswer"
            android:layout_marginLeft="3dp"
            android:text="TextView" />

        <TextView
            android:id="@+id/time"
            style="@style/TxtView"
            android:textColor="#000000"
           android:layout_marginLeft="7dp"
            android:layout_alignBottom="@+id/textView2"
            android:layout_toRightOf="@+id/textView2"
            android:text="TextView" />

        <LinearLayout
            android:id="@+id/LinearLayout2"
            android:layout_width="fill_parent"
            android:layout_height="150dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/textView2"
            android:layout_marginTop="10dp"
            android:orientation="vertical" >

        </LinearLayout>

        <Button
            android:id="@+id/button1"
            style="@style/MyBtnStyle"
            android:layout_alignLeft="@+id/textView2"
            android:layout_below="@+id/LinearLayout2"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="45dp"
            android:text="Restart" />
        
    </RelativeLayout>

</ScrollView>