
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:background="@drawable/kpss1"
     android:layout_height="fill_parent"
     android:fillViewport="true"
    >
 <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content" >

     <TextView
         android:id="@+id/textView1"
         style="@style/TxtView"
         android:textColor="#000000"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:text="@string/question" />

     <TextView
         android:id="@+id/numberofquestion"
         style="@style/TxtView"
         android:textColor="#000000"
         android:layout_alignBaseline="@+id/textView1"
         android:layout_alignBottom="@+id/textView1"
         android:layout_marginLeft="8dp"
         android:layout_toRightOf="@+id/textView1"
          />

     <TextView
         android:id="@+id/textView3"
         style="@style/TxtView"
         android:textColor="#000000"
         android:layout_alignBaseline="@+id/numberofquestion"
         android:layout_alignBottom="@+id/numberofquestion"
         android:layout_marginLeft="8dp"
         android:layout_toRightOf="@+id/numberofquestion"
         android:text="@string/of" />

     <TextView
         android:id="@+id/textView4"
         style="@style/TxtView"
         android:textColor="#000000"
         android:layout_alignBottom="@+id/textView3"
         android:layout_marginLeft="8dp"
         android:layout_toRightOf="@+id/textView3"
         android:text="@string/numberofquestion" />

     <ImageView
         android:id="@+id/imageView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/textView1"
         android:layout_below="@+id/textView1"
         android:layout_marginTop="10dp"
         android:src="@drawable/ic_question" />

     <TextView
         android:id="@+id/questionText"
         style="@style/TxtView"
         android:textColor="#000000"
         android:layout_alignTop="@+id/imageView1"
         android:layout_marginLeft="2dp"
         android:layout_marginTop="10dp"
         android:layout_toRightOf="@+id/imageView1"
        />

     <RadioGroup
         android:id="@+id/radioGroup1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/questionText"
         android:layout_marginLeft="10dp"
         android:orientation="vertical" >
     </RadioGroup>

     <LinearLayout
         android:id="@+id/linearLayout1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/radioGroup1"
         android:orientation="horizontal"
         android:layout_centerHorizontal="true" >

         <ImageButton
             android:id="@+id/imgback"
             android:layout_width="80dp"
             android:layout_height="50dp"
             android:layout_weight="1"
             android:src="@drawable/ic_back" />
           <ImageButton
             android:id="@+id/imagnext"
            android:layout_width="80dp"
             android:layout_height="50dp"
             android:layout_weight="1"
             android:src="@drawable/ic_next" />

         <ImageButton
             android:id="@+id/imagpause"
            android:layout_width="80dp"
             android:layout_height="50dp"
             android:layout_weight="1"
             android:src="@drawable/ic_pause" />

         <ImageButton
             android:id="@+id/imagcancel"
             android:layout_width="80dp"
             android:layout_height="50dp"
             android:layout_weight="1"
             android:src="@drawable/ic_cancel" />

     </LinearLayout>

     <TextView
         android:id="@+id/timertext"
         style="@style/TxtView"
         android:textColor="#000000"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_marginTop="16dp"
         android:text="@string/timer" />

     <TextView
         android:id="@+id/timertextvalue"
         style="@style/TxtView"
         android:textColor="#000000"
         android:layout_alignBaseline="@+id/timertext"
         android:layout_alignBottom="@+id/timertext"
         android:layout_toRightOf="@+id/timertext"
         
         android:text="TextView" />

 </RelativeLayout>

</ScrollView>